--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -117,7 +117,7 @@
                 <a class="nav-link" th:href="@{/tutorpracticas/dashboard}">
                     <i class="bi bi-speedometer2 me-2"></i>Dashboard
                 </a>
-                <a class="nav-link" th:href="@{/tutorpracticas/alumnos}">
+                <a class="nav-link" th:href="@{/tutorpracticas/alumno}">
                     <i class="bi bi-person-badge me-2"></i>Mis Alumnos
                 </a>
             </div>
