--- a/src/main/resources/templates/admin/alumno/observaciondiaria/observaciones.html
+++ b/src/main/resources/templates/admin/alumno/observaciondiaria/observaciones.html
@@ -66,7 +66,8 @@
                                             </td>
                                             <td th:text="${#temporals.format(observacion.fechaCreacion, 'dd/MM/yyyy HH:mm')}">01/01/2024 10:00</td>
                                             <td>
-                                                <a th:href="@{/admin/alumno/observaciondiaria/{id}(id=${observacion.id})}" 
+                                              <!--  <a th:href="@{/admin/alumno/observaciondiaria/{id}(id=${observacion.id})}" -->
+                                               <a th:href="@{/admin/alumno/observaciondiaria/{id}/editar(id=${observacion.id})}" 
                                                    class="btn btn-sm btn-info" 
                                                    title="Ver detalle">
                                                     <i class="fas fa-eye"></i> Ver
